CMAKE_MINIMUM_REQUIRED(VERSION 2.8)      
 
ADD_DEFINITIONS(-DDISKLESS_CONFIGURATION=1 -DLOG4CXX_STATIC -DHAVE_PTHREAD -DNDEBUG -DBOOST_SPIRIT_THREADSAFE)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g -O3")

SET(topDir ${CMAKE_CURRENT_SOURCE_DIR})
SET(LIBRARY_OUTPUT_PATH ${topDir}/linux/lib)  
SET(EXECUTABLE_OUTPUT_PATH ${topDir}/linux/bin) 

IF (NOT EXISTS "${topDir}/linux")
    FILE(MAKE_DIRECTORY "${topDir}/linux")
ENDIF()

ADD_SUBDIRECTORY(asio) 
ADD_SUBDIRECTORY(server) 
ADD_SUBDIRECTORY(client)
